Added base for camera actors

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,14 +78,9 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ScanReach.ScanReach:PersistentLevel.ScanReach
-OpenAssetsAtExit=/Game/Materials/BackgroundMaterial.BackgroundMaterial
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
+OpenAssetsAtExit=/Game/Blueprints/Camera/bp_DeckCamera.bp_DeckCamera
 OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Deck.bp_Deck
-OpenAssetsAtExit=/Game/Materials/m_Deck.m_Deck
-OpenAssetsAtExit=/Game/Blueprints/Structs/s_DeckSetup.s_DeckSetup
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -582,6 +577,30 @@ Image.Render Transform=True
 Image.Navigation=True
 Image.Events=True
 SizeBox.Layout=True
+bp_DeckCamera_C.Tick=True
+bp_DeckCamera_C.Rendering=True
+bp_DeckCamera_C.Replication=True
+bp_DeckCamera_C.Input=True
+bp_DeckCamera_C.Actor=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.Color Grading=True
+CameraComponent.Tonemapper=True
+CameraComponent.Mobile Tonemapper=True
+CameraComponent.Lens=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+bp_DeckCamera_C.TransformCommon=True
+bp_Deck_C.Default=True
+K2Node_VariableSet.Events=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -596,7 +615,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Ship
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -606,8 +625,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=165.000
-WindowSize=X=1300.000 Y=740.000
+ScreenPosition=X=807.000 Y=436.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1237,6 +1256,7 @@ K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForPropertie
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Camera/bp_DeckCamera.bp_DeckCamera;
 RecentlyPlaced=/Game/Blueprints/Ship/bp_Ship.bp_Ship;
 RecentlyPlaced=/Game/Meshes/Test_Plain.Test_Plain;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1247,7 +1267,7 @@ Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-bp_Ship_C="\"Object.Default.Decks\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E.Decks_3_D027BBC1475B68960105F5BAC0C0563E[0]\" "
+bp_Ship_C=
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Appearance.Brush\" "
 Visual="\"Object.Appearance.Brush\" "
