--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,9 +78,9 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Camera/bp_DeckCamera.bp_DeckCamera
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Deck.bp_Deck
 OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -601,6 +601,169 @@ bp_Deck_C.Default=True
 K2Node_VariableSet.Events=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
+w_Main_C.Appearance=True
+w_Main_C.Interaction=True
+w_Main_C.Input=True
+w_Main_C.Designer=True
+w_Main_C.Layout=True
+w_Main_C.Behavior=True
+w_Main_C.Performance=True
+w_Main_C.Render Transform=True
+w_Main_C.Navigation=True
+bp_deckCamera_C.Variable=True
+bp_deckCamera_C.Sockets=True
+bp_deckCamera_C.Color Grading=True
+bp_deckCamera_C.Tonemapper=True
+bp_deckCamera_C.Mobile Tonemapper=True
+bp_deckCamera_C.Lens=True
+bp_deckCamera_C.Rendering Features=True
+bp_deckCamera_C.Projection=True
+bp_deckCamera_C.PostProcessVolume=True
+bp_deckCamera_C.SceneCapture=True
+bp_deckCamera_C.Tags=True
+bp_deckCamera_C.ComponentReplication=True
+bp_deckCamera_C.Activation=True
+bp_deckCamera_C.Cooking=True
+bp_deckCamera_C.Events=True
+TextureRenderTarget2D.Compression=True
+TextureRenderTarget2D.TextureRenderTarget2D=True
+TextureRenderTarget2D.TextureRenderTarget=True
+TextureRenderTarget2D.Adjustments=True
+TextureRenderTarget2D.LevelOfDetail=True
+TextureRenderTarget2D.Compositing=True
+REINST_bp_deckCamera_C_108.Variable=True
+REINST_bp_deckCamera_C_108.TransformCommon=True
+REINST_bp_deckCamera_C_108.Sockets=True
+REINST_bp_deckCamera_C_108.Color Grading=True
+REINST_bp_deckCamera_C_108.Tonemapper=True
+REINST_bp_deckCamera_C_108.Mobile Tonemapper=True
+REINST_bp_deckCamera_C_108.Lens=True
+REINST_bp_deckCamera_C_108.Rendering Features=True
+REINST_bp_deckCamera_C_108.Projection=True
+REINST_bp_deckCamera_C_108.PostProcessVolume=True
+REINST_bp_deckCamera_C_108.SceneCapture=True
+REINST_bp_deckCamera_C_108.Rendering=True
+REINST_bp_deckCamera_C_108.Tags=True
+REINST_bp_deckCamera_C_108.ComponentReplication=True
+REINST_bp_deckCamera_C_108.Activation=True
+REINST_bp_deckCamera_C_108.Cooking=True
+REINST_bp_deckCamera_C_108.Events=True
+REINST_bp_deckCamera_C_116.TransformCommon=True
+REINST_bp_deckCamera_C_116.Color Grading=True
+REINST_bp_deckCamera_C_116.Tonemapper=True
+REINST_bp_deckCamera_C_116.Mobile Tonemapper=True
+REINST_bp_deckCamera_C_116.Lens=True
+REINST_bp_deckCamera_C_116.Rendering Features=True
+REINST_bp_deckCamera_C_116.Projection=True
+REINST_bp_deckCamera_C_116.PostProcessVolume=True
+REINST_bp_deckCamera_C_116.SceneCapture=True
+REINST_bp_deckCamera_C_116.Rendering=True
+REINST_bp_deckCamera_C_116.Tags=True
+REINST_bp_deckCamera_C_116.Activation=True
+REINST_bp_deckCamera_C_116.Cooking=True
+REINST_bp_deckCamera_C_116.Input=True
+REINST_bp_deckCamera_C_116.Actor=True
+REINST_bp_deckCamera_C_116.Variable=True
+REINST_bp_deckCamera_C_116.Sockets=True
+REINST_bp_deckCamera_C_116.ComponentReplication=True
+REINST_bp_deckCamera_C_116.Events=True
+K2Node_VariableGet.Color Grading=True
+K2Node_VariableGet.Tonemapper=True
+K2Node_VariableGet.Mobile Tonemapper=True
+K2Node_VariableGet.Lens=True
+K2Node_VariableGet.Rendering Features=True
+K2Node_MakeStruct.PinOptions=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Behavior=True
+ScrollBox.Performance=True
+ScrollBox.Render Transform=True
+ScrollBox.Navigation=True
+REINST_bp_deckCamera_C_286.Variable=True
+REINST_bp_deckCamera_C_286.TransformCommon=True
+REINST_bp_deckCamera_C_286.Sockets=True
+REINST_bp_deckCamera_C_286.Color Grading=True
+REINST_bp_deckCamera_C_286.Tonemapper=True
+REINST_bp_deckCamera_C_286.Mobile Tonemapper=True
+REINST_bp_deckCamera_C_286.Lens=True
+REINST_bp_deckCamera_C_286.Rendering Features=True
+REINST_bp_deckCamera_C_286.Projection=True
+REINST_bp_deckCamera_C_286.PostProcessVolume=True
+REINST_bp_deckCamera_C_286.SceneCapture=True
+REINST_bp_deckCamera_C_286.Rendering=True
+REINST_bp_deckCamera_C_286.Tags=True
+REINST_bp_deckCamera_C_286.ComponentReplication=True
+REINST_bp_deckCamera_C_286.Activation=True
+REINST_bp_deckCamera_C_286.Cooking=True
+REINST_bp_deckCamera_C_286.Events=True
+REINST_bp_deckCamera_C_292.Variable=True
+REINST_bp_deckCamera_C_292.TransformCommon=True
+REINST_bp_deckCamera_C_292.Sockets=True
+REINST_bp_deckCamera_C_292.Color Grading=True
+REINST_bp_deckCamera_C_292.Tonemapper=True
+REINST_bp_deckCamera_C_292.Mobile Tonemapper=True
+REINST_bp_deckCamera_C_292.Lens=True
+REINST_bp_deckCamera_C_292.Rendering Features=True
+REINST_bp_deckCamera_C_292.Projection=True
+REINST_bp_deckCamera_C_292.PostProcessVolume=True
+REINST_bp_deckCamera_C_292.SceneCapture=True
+REINST_bp_deckCamera_C_292.Rendering=True
+REINST_bp_deckCamera_C_292.Tags=True
+REINST_bp_deckCamera_C_292.ComponentReplication=True
+REINST_bp_deckCamera_C_292.Activation=True
+REINST_bp_deckCamera_C_292.Cooking=True
+REINST_bp_deckCamera_C_292.Events=True
+REINST_bp_deckCamera_C_296.Variable=True
+REINST_bp_deckCamera_C_296.TransformCommon=True
+REINST_bp_deckCamera_C_296.Sockets=True
+REINST_bp_deckCamera_C_296.Color Grading=True
+REINST_bp_deckCamera_C_296.Tonemapper=True
+REINST_bp_deckCamera_C_296.Mobile Tonemapper=True
+REINST_bp_deckCamera_C_296.Lens=True
+REINST_bp_deckCamera_C_296.Rendering Features=True
+REINST_bp_deckCamera_C_296.Projection=True
+REINST_bp_deckCamera_C_296.PostProcessVolume=True
+REINST_bp_deckCamera_C_296.SceneCapture=True
+REINST_bp_deckCamera_C_296.Rendering=True
+REINST_bp_deckCamera_C_296.Tags=True
+REINST_bp_deckCamera_C_296.ComponentReplication=True
+REINST_bp_deckCamera_C_296.Activation=True
+REINST_bp_deckCamera_C_296.Cooking=True
+REINST_bp_deckCamera_C_296.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Performance=True
+Button.Render Transform=True
+Button.Navigation=True
+Button.Events=True
+w_deckViewBox_C.Appearance=True
+w_deckViewBox_C.Interaction=True
+w_deckViewBox_C.Input=True
+w_deckViewBox_C.Behavior=True
+w_deckViewBox_C.Performance=True
+w_deckViewBox_C.Render Transform=True
+w_deckViewBox_C.Navigation=True
+w_deckViewBox_C.Layout=True
+REINST_bp_deckCamera_C_314.Variable=True
+REINST_bp_deckCamera_C_314.TransformCommon=True
+REINST_bp_deckCamera_C_314.Sockets=True
+REINST_bp_deckCamera_C_314.Color Grading=True
+REINST_bp_deckCamera_C_314.Tonemapper=True
+REINST_bp_deckCamera_C_314.Mobile Tonemapper=True
+REINST_bp_deckCamera_C_314.Lens=True
+REINST_bp_deckCamera_C_314.Rendering Features=True
+REINST_bp_deckCamera_C_314.Projection=True
+REINST_bp_deckCamera_C_314.PostProcessVolume=True
+REINST_bp_deckCamera_C_314.SceneCapture=True
+REINST_bp_deckCamera_C_314.Rendering=True
+REINST_bp_deckCamera_C_314.Tags=True
+REINST_bp_deckCamera_C_314.ComponentReplication=True
+REINST_bp_deckCamera_C_314.Activation=True
+REINST_bp_deckCamera_C_314.Cooking=True
+REINST_bp_deckCamera_C_314.Events=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -615,7 +778,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Ship
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -625,8 +788,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=807.000 Y=436.000
-WindowSize=X=1310.000 Y=750.000
+ScreenPosition=X=153.000 Y=871.000
+WindowSize=X=1320.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1197,6 +1360,8 @@ MaterialEditor.TimeStamp=2017.08.02-17.10.39
 MaterialEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2017.08.02-17.11.01
 SequencerWidgets.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2017.08.02-17.11.16
+TextureEditor.LastCompileMethod=Unknown
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.ScrollDown,InputSettings.Bindings.ActionMappings.ScrollUp,InputSettings.Bindings.ActionMappings,
@@ -1256,7 +1421,7 @@ K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForPropertie
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Camera/bp_DeckCamera.bp_DeckCamera;
+RecentlyPlaced=/Game/Blueprints/Camera/bp_DeckCamera.bp_deckCamera;
 RecentlyPlaced=/Game/Blueprints/Ship/bp_Ship.bp_Ship;
 RecentlyPlaced=/Game/Meshes/Test_Plain.Test_Plain;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1267,10 +1432,13 @@ Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-bp_Ship_C=
+bp_Ship_C="\"Object.Default.Decks\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
+Button="\"Object.Appearance.WidgetStyle\" "
+ContentWidget=
+PanelWidget=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1294,6 +1462,14 @@ CookerSettings.Cooker=True
 /Game/Blueprints/Structs/s_FloorInfo.s_FloorInfo=0
 /Game/Blueprints/Structs/s_DeckSetup.s_DeckSetup=0
 /Game/Blueprints/Ruleset/ScanReach_Con.ScanReach_Con=0
+/Game/Blueprints/Camera/bp_DeckCamera.bp_DeckCamera=0
+/Game/Blueprints/Camera/DeckCamera_RT_Mat.DeckCamera_RT_Mat=0
+/Game/Blueprints/Camera/DeckCamera_RT.DeckCamera_RT=0
+/Game/Blueprints/Widgets/w_Deckview.w_Deckview=0
+/Game/Blueprints/Widgets/w_deckViewBox.w_deckViewBox=0
+/Game/Blueprints/Camera/DeckCamera_RT_2.DeckCamera_RT_2=0
+/Game/Blueprints/Camera/DeckCamera_RT_3.DeckCamera_RT_3=0
+/Game/Blueprints/Widgets/w_DeckSelction.w_DeckSelction=0
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
@@ -1303,5 +1479,13 @@ PrimType=1
 PreviewWidth=1280
 PreviewHeight=720
 PreviewAspectRatio=16:9
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=LightingResults
 
 
