Added base for Deck overview

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,9 +78,7 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
+OpenAssetsAtExit=/Game/Blueprints/Structs/s_FloorInfo.s_FloorInfo
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -764,6 +762,21 @@ REINST_bp_deckCamera_C_314.ComponentReplication=True
 REINST_bp_deckCamera_C_314.Activation=True
 REINST_bp_deckCamera_C_314.Cooking=True
 REINST_bp_deckCamera_C_314.Events=True
+Brush.TransformCommon=True
+Brush.BrushSettings=True
+Brush.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Lightmass=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -778,7 +791,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -789,7 +802,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=153.000 Y=871.000
-WindowSize=X=1320.000 Y=760.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1432,13 +1445,14 @@ Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-bp_Ship_C="\"Object.Default.Decks\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" "
+bp_Ship_C="\"Object.Default.Decks\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E.Decks_3_D027BBC1475B68960105F5BAC0C0563E[0]\" "
 Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
 Button="\"Object.Appearance.WidgetStyle\" "
 ContentWidget=
 PanelWidget=
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1470,6 +1484,9 @@ CookerSettings.Cooker=True
 /Game/Blueprints/Camera/DeckCamera_RT_2.DeckCamera_RT_2=0
 /Game/Blueprints/Camera/DeckCamera_RT_3.DeckCamera_RT_3=0
 /Game/Blueprints/Widgets/w_DeckSelction.w_DeckSelction=0
+/Game/Blueprints/Structs/s_DeckButtonInfo.s_DeckButtonInfo=1
+/Game/Blueprints/Ship/bp_Ship.bp_Ship=1
+/Game/Blueprints/Ship/bp_Deck.bp_Deck=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
