--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,8 +77,8 @@ MRUItem0=/Game/ScanReach
 LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Structs/s_FloorInfo.s_FloorInfo
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -777,6 +777,8 @@ DirectionalLight.Rendering=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1450,7 +1452,7 @@ Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
 Button="\"Object.Appearance.WidgetStyle\" "
-ContentWidget=
+ContentWidget="\"Object.Appearance.WidgetStyle\" "
 PanelWidget=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
