Added base for deck overview and ship/personell info

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,8 +77,12 @@ MRUItem0=/Game/ScanReach
 LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -779,6 +783,57 @@ DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
 IntProperty.Variable=True
 IntProperty.DefaultValueCategory=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+w_DeckButton_C.Default=True
+w_DeckButton_C.Appearance=True
+w_DeckButton_C.Interaction=True
+w_DeckButton_C.Input=True
+w_DeckButton_C.Designer=True
+w_DeckButton_C.Layout=True
+w_DeckButton_C.Behavior=True
+w_DeckButton_C.Performance=True
+w_DeckButton_C.Render Transform=True
+w_DeckButton_C.Navigation=True
+w_DeckOverview_C.Layout=True
+w_DeckOverview_C.Appearance=True
+w_DeckOverview_C.Interaction=True
+w_DeckOverview_C.Input=True
+w_DeckOverview_C.Behavior=True
+w_DeckOverview_C.Performance=True
+w_DeckOverview_C.Render Transform=True
+w_DeckOverview_C.Navigation=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Performance=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Navigation=True
+w_Deckview_C.Appearance=True
+w_Deckview_C.Interaction=True
+w_Deckview_C.Input=True
+w_Deckview_C.Behavior=True
+w_Deckview_C.Performance=True
+w_Deckview_C.Render Transform=True
+w_Deckview_C.Navigation=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Performance=True
+VerticalBox.Render Transform=True
+VerticalBox.Navigation=True
+w_shipInfo_C.Appearance=True
+w_shipInfo_C.Interaction=True
+w_shipInfo_C.Input=True
+w_shipInfo_C.Behavior=True
+w_shipInfo_C.Performance=True
+w_shipInfo_C.Render Transform=True
+w_shipInfo_C.Navigation=True
+w_shipInfo_C.Layout=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1443,18 +1498,33 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C="\"Object.Default.Decks\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E.Decks_3_D027BBC1475B68960105F5BAC0C0563E[0]\" "
-Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
-Button="\"Object.Appearance.WidgetStyle\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" "
-PanelWidget=
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+SizeBox="\"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
+w_DeckButton_C="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+w_deckViewBox_C="\"Object.Render Transform.RenderTransform\" "
+w_DeckOverview_C="\"Object.Render Transform.RenderTransform\" "
+ScrollBox="\"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+w_Deckview_C="\"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Render Transform.RenderTransform\" "
+w_Main_C="\"Object.Render Transform.RenderTransform\" "
+w_shipInfo_C="\"Object.Render Transform.RenderTransform\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
