--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,12 +77,13 @@ MRUItem0=/Game/ScanReach
 LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_shipInfo.w_shipInfo
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -858,8 +859,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=153.000 Y=871.000
-WindowSize=X=1340.000 Y=780.000
+ScreenPosition=X=554.000 Y=63.000
+WindowSize=X=1350.000 Y=790.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1498,19 +1499,19 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C="\"Object.Default.Decks\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" \"Object.Default.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E.Decks_3_D027BBC1475B68960105F5BAC0C0563E[0]\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-SizeBox="\"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
