Added change camera view functionality

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@WINDOWS-EUOFFC3
 LastExecutedLaunchName=WINDOWS-EUOFFC3
-NewWindowPosition=(X=315,Y=148)
+NewWindowPosition=(X=-8,Y=-8)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -79,11 +79,15 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_deckViewBox.w_deckViewBox
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Deck.bp_Deck
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Deck.bp_Deck
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
 OpenAssetsAtExit=/Game/Blueprints/Camera/bp_DeckCamera.bp_deckCamera
+OpenAssetsAtExit=/Game/Blueprints/Widgets/DeckOverview_Container.DeckOverview_Container
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -855,6 +859,14 @@ DeckOverview_Container_C.Default=True
 bp_deckCamera_C.Default=True
 bp_Ship_C.Camera=True
 bp_Ship_C.UI/HUD=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.ImportSettings=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -879,8 +891,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=408.000 Y=414.000
-WindowSize=X=1360.000 Y=800.000
+ScreenPosition=X=168.000 Y=114.000
+WindowSize=X=1370.000 Y=810.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1519,34 +1531,34 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-bp_Ship_C=
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+bp_Ship_C="\"Object.Deck.Decks\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_DeckButton_C=
 UserWidget=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-w_deckViewBox_C="\"Object.Render Transform.RenderTransform\" "
-w_DeckOverview_C=
-ScrollBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+w_deckViewBox_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+w_DeckOverview_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 w_Deckview_C="\"Object.Render Transform.RenderTransform\" "
-VerticalBox="\"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_Main_C=
 w_shipInfo_C="\"Object.Render Transform.RenderTransform\" "
-DeckOverview_Container_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+DeckOverview_Container_C=
 bp_Deck_C=
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -1566,6 +1578,7 @@ User Created=False
 
 [DetailCategoriesAdvanced]
 CookerSettings.Cooker=True
+VerticalBox.Behavior=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Structs/s_FloorInfo.s_FloorInfo=0
@@ -1574,8 +1587,8 @@ CookerSettings.Cooker=True
 /Game/Blueprints/Camera/bp_DeckCamera.bp_DeckCamera=0
 /Game/Blueprints/Camera/DeckCamera_RT_Mat.DeckCamera_RT_Mat=0
 /Game/Blueprints/Camera/DeckCamera_RT.DeckCamera_RT=0
-/Game/Blueprints/Widgets/w_Deckview.w_Deckview=0
-/Game/Blueprints/Widgets/w_deckViewBox.w_deckViewBox=0
+/Game/Blueprints/Widgets/w_Deckview.w_Deckview=1
+/Game/Blueprints/Widgets/w_deckViewBox.w_deckViewBox=1
 /Game/Blueprints/Camera/DeckCamera_RT_2.DeckCamera_RT_2=0
 /Game/Blueprints/Camera/DeckCamera_RT_3.DeckCamera_RT_3=0
 /Game/Blueprints/Widgets/w_DeckSelction.w_DeckSelction=0
@@ -1586,11 +1599,14 @@ CookerSettings.Cooker=True
 /Game/Blueprints/Widgets/w_Main.w_Main=0
 /Game/Blueprints/Widgets/w_DeckButton.w_DeckButton=0
 /Game/Blueprints/Widgets/DeckOverview_Container.DeckOverview_Container=0
-/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview=0
+/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview=1
+/Game/Textures/UI/T_Background_Grey.T_Background_Grey=1
+/Game/Materials/BackgroundMaterial.BackgroundMaterial=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
-PrimType=1
+PrimType=4
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1603,6 +1619,9 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
