--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,15 +79,6 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_deckViewBox.w_deckViewBox
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Deck.bp_Deck
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
-OpenAssetsAtExit=/Game/Blueprints/Camera/bp_DeckCamera.bp_deckCamera
-OpenAssetsAtExit=/Game/Blueprints/Widgets/DeckOverview_Container.DeckOverview_Container
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -892,8 +883,8 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=168.000 Y=114.000
-WindowSize=X=1370.000 Y=810.000
-InitiallyMaximized=True
+WindowSize=X=1380.000 Y=820.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
