--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@WINDOWS-EUOFFC3
 LastExecutedLaunchName=WINDOWS-EUOFFC3
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=315,Y=148)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -79,6 +79,13 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Status.w_Status
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
+OpenAssetsAtExit=/Game/Blueprints/Widgets/DeckOverview_Container.DeckOverview_Container
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Sensor.bp_Sensor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -877,6 +884,22 @@ REINST_bp_deckCamera_C_74.ComponentReplication=True
 REINST_bp_deckCamera_C_74.Activation=True
 REINST_bp_deckCamera_C_74.Cooking=True
 REINST_bp_deckCamera_C_74.Events=True
+w_Status_C.Layout=True
+w_Status_C.Appearance=True
+w_Status_C.Interaction=True
+w_Status_C.Input=True
+w_Status_C.Behavior=True
+w_Status_C.Performance=True
+w_Status_C.Render Transform=True
+w_Status_C.Navigation=True
+w_DeckOverview_C.Default=True
+bp_Sensor_C.Tick=True
+bp_Sensor_C.Rendering=True
+bp_Sensor_C.Replication=True
+bp_Sensor_C.Input=True
+bp_Sensor_C.Actor=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -891,7 +914,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Ship
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -901,8 +924,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=168.000 Y=114.000
-WindowSize=X=1400.000 Y=840.000
+ScreenPosition=X=166.000 Y=537.000
+WindowSize=X=1410.000 Y=850.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1541,35 +1564,36 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-bp_Ship_C="\"Object.Deck.Decks\" \"Object.Deck.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" \"Object.Deck.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E.Decks_3_D027BBC1475B68960105F5BAC0C0563E[8]\" "
+bp_Ship_C=
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle.Disabled\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Overlay="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-TextBlock="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-w_DeckButton_C=
-UserWidget=
-CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|SizeBox Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+w_DeckButton_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_deckViewBox_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-w_DeckOverview_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+w_DeckOverview_C=
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_Deckview_C=
 VerticalBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_Main_C=
-w_shipInfo_C="\"Object.Render Transform.RenderTransform\" "
+w_shipInfo_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 DeckOverview_Container_C=
 bp_Deck_C=
+w_Status_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1592,6 +1616,7 @@ VerticalBox.Behavior=False
 TextureRenderTarget2D.TextureRenderTarget2D=True
 PreviewMaterial.Material=True
 bp_deckCamera_C.Mobile Tonemapper=False
+TextBlock.Appearance=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Structs/s_FloorInfo.s_FloorInfo=0
@@ -1616,6 +1641,7 @@ bp_deckCamera_C.Mobile Tonemapper=False
 /Game/Textures/UI/T_Background_Grey.T_Background_Grey=1
 /Game/Materials/BackgroundMaterial.BackgroundMaterial=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Blueprints/Structs/s_Sensor.s_Sensor=0
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
