--- a/SR_Prototype_V3/SR_Prototype_V3.uproject
+++ b/SR_Prototype_V3/SR_Prototype_V3.uproject
@@ -2,5 +2,12 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.16",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Modules": [
+		{
+			"Name": "SR_Prototype_V3",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		}
+	]
 }
