Added some new versions of textures.

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,7 +80,7 @@ MRUItem0=/Game/ScanReach
 LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1614,6 +1614,7 @@ StaticMesh.Thumbnail=True
 StaticMesh.Navigation=True
 w_statusText_C.Default=True
 w_Options_C.Default=True
+MaterialExpression.MaterialExpression=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
