Fixed Transparent texture issues!

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,7 +80,7 @@ MRUItem0=/Game/ScanReach
 LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1639,8 +1639,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
-ScreenPosition=X=143.000 Y=18.000
-WindowSize=X=1730.000 Y=1040.000
+ScreenPosition=X=-1672.000 Y=120.000
+WindowSize=X=1740.000 Y=1040.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2349,6 +2349,8 @@ REINST_BP_Pawn_C_145="\"Object.Character.CapsuleComponent.Object.Collision.BodyI
 REINST_BP_Pawn_C_150="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_Pawn_C_166="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
+RendererSettings="\"Object.Translucency.TranslucentSortAxis\" "
+DeveloperSettings=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
