--- a/SR_Prototype_V3/Config/DefaultEngine.ini
+++ b/SR_Prototype_V3/Config/DefaultEngine.ini
@@ -14,6 +14,8 @@ GameDefaultMap=/Game/ScanReach.ScanReach
 [/Script/Engine.RendererSettings]
 r.TextureStreaming=False
 r.DefaultFeature.AutoExposure=False
+r.AllowOcclusionQueries=False
+r.TranslucentSortPolicy=1
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -53,5 +55,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
