--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,10 +81,6 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
-OpenAssetsAtExit=/Game/Blueprints/Widgets/W_SideInfo.W_SideInfo
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_shipInfo.w_shipInfo
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1633,7 +1629,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Textures/UI/UI_V3
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1644,7 +1640,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1750.000 Y=1050.000
+WindowSize=X=1760.000 Y=1040.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1661,11 +1657,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content
+UNR=C:/Users/Magnus/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content
 BRUSH=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 FBX=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 FBXAnim=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
-GenericImport=C:/Users/Magnus/Desktop/Scan_Reach/UE_UI/UI_V3/T_MusterStation.png
+GenericImport=C:/Users/Magnus/Desktop/Scan_Reach/UE_UI/UI_V3/T_Options_Hoverd.png
 GenericExport=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 GenericOpen=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 GenericSave=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
